--- a/public/css/sass/layouts/_layouts.scss
+++ b/public/css/sass/layouts/_layouts.scss
@@ -8,42 +8,52 @@
 "./footer",
 "./mediaquery";
 
-
-
 /*--------------------------------------------------------------
 # scrolbar
 --------------------------------------------------------------*/
+
+
 /* width */
+
 ::-webkit-scrollbar {
-  width: 8px;  
-  -webkit-transition: all 0.3s ease-in;  
-  transition: all 0.3s ease-in;
+    width: 8px;
+    -webkit-transition: all 0.3s ease-in;
+    transition: all 0.3s ease-in;
 }
 
+
 /* Track */
+
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px $color-profile2; 
-  border-radius: 10px;
-  
+    box-shadow: inset 0 0 5px $color-2;
+    border-radius: 10px;
 }
- 
+
+
 /* Handle */
+
 ::-webkit-scrollbar-thumb {
-  background:  $color-profile2; 
-  border-radius: 10px;  
+    background: $color-2;
+    border-radius: 10px;
 }
-html::-webkit-scrollbar{
-  width:8px;
-  height:8px;
+
+html::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
 }
+
+
 /* Handle on hover */
+
 ::-webkit-scrollbar-thumb:hover {
-  background: $color-profile3; 
+    background: $color-3;
 }
+
 
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
+
 .back-to-top {
     position: fixed;
     display: none;
@@ -52,24 +62,22 @@ html::-webkit-scrollbar{
     border-radius: 50px;
     right: 15px;
     bottom: 15px;
-    background: $color-profile2;
-    color: $color-profile1;
+    background: $color-2;
+    color: $color-1;
     transition: all 0.5s ease-in-out;
     z-index: 50;
     text-align: center;
     padding-top: 10px;
+}
 
-  }
-  
-  .back-to-top img {
+.back-to-top img {
     width: 20px;
     height: 20px;
-  }
-  
-  .back-to-top:hover {
-    background: $color-profile3;
-  }
-  
+}
+
+.back-to-top:hover {
+    background: $color-3;
+}
 
 // ------------general parameters in common layouts----------------
 //layout flexbox and grid
@@ -87,16 +95,14 @@ html::-webkit-scrollbar{
     display: grid;
 }
 
-.title{
-    color: $color-profile2;
+.title {
+    color: $color-2;
 }
+
 //generals parametres in section best-sales-container and ourplant-container
-
-
-  // -------------- media query  -------------------
-
-  @include for-phone {   
-  // header -----------------
+// -------------- media query  -------------------
+@include for-phone {
+    // header -----------------
     //   .hamburger{display: block;}// display nav mobile
     //   .nav{ display: none; }         
     //   .titlescroll{
@@ -105,21 +111,20 @@ html::-webkit-scrollbar{
     //            margin-top: 60px;
     //        }
     //   } 
-  }
-  
-  @include for-tablet {
-  // header---------------------------
+}
+
+@include for-tablet {
+    // header---------------------------
     //   .hamburger{display: none;} //no display nav mobile   
     //   .nav{ display: flex; }  
     //   .nav2 {display: none;}
     //   .titlescroll{ margin: -2.92vw  8vw;} 
-     
-  //section best-sales-container--------------
+    //section best-sales-container--------------
     //  .best-sales-container {
     //   margin: 0 100px 50px;
     //  }
     //   .plants1 { width: 50%;  }
-  // section ourplant-container--------------
+    // section ourplant-container--------------
     //   .ourplant-container {
     //     //   margin: 0 100px 50px;
     //   }
@@ -128,16 +133,15 @@ html::-webkit-scrollbar{
     //     //   grid-template-rows: 500px 500px 500px;
     //     //   grid-template-areas: "a b" "c d" "e f";
     //   }
-  }
-  
-  @include for-desktop {
-  // header---------------------------
+}
+
+@include for-desktop {
+    // header---------------------------
     //   .hamburger{display: none;} //no display nav mobile  
     //   .nav{ display: flex; }   
     //   .nav2 {display: none;}         
     //   .titlescroll{ margin: -2.92vw  8vw;}
-  
-  // section best-sales-container--------------
+    // section best-sales-container--------------
     //   .best-sales-container {
     //       margin: 0 100px 50px;
     //   }
@@ -149,14 +153,13 @@ html::-webkit-scrollbar{
     //   .best-sales-plant4 {
     //       width: 100%;
     //   }
-  // section ourplant-container--------------
-//       .ourplant-container {
-//           margin: 0 100px 50px;
-//       }
-//       .ourplant-plant {
-//           grid-template-columns: 1fr 1fr 1fr 1fr;
-//           grid-template-rows: 500px 500px 500px 500px;
-//           grid-template-areas: "a a b b" "a a c c" "d e e f" "d e e f";
-//       }
-     
-  }
+    // section ourplant-container--------------
+    //       .ourplant-container {
+    //           margin: 0 100px 50px;
+    //       }
+    //       .ourplant-plant {
+    //           grid-template-columns: 1fr 1fr 1fr 1fr;
+    //           grid-template-rows: 500px 500px 500px 500px;
+    //           grid-template-areas: "a a b b" "a a c c" "d e e f" "d e e f";
+    //       }
+}
