--- a/public/css/sass/layouts/_mediaquery.scss
+++ b/public/css/sass/layouts/_mediaquery.scss
@@ -34,7 +34,7 @@
             border-radius: 0 0 80% / 100% 0;
             opacity: .9;
             background-image: $color-bgNav;
-            background: radial-gradient(ellipse 70% 100% at 0px 50%, transparent 49%, $color-profile2 50%);
+            background: radial-gradient(ellipse 70% 100% at 0px 50%, transparent 49%, $color-2 50%);
             .logo {
                 margin-left: 25%;
             }
@@ -117,7 +117,7 @@
                     position: relative;
                     display: block;
                     font-family: Lato, sans-serif;
-                    color: $color-profile1;
+                    color: $color-1;
                     text-decoration: none;
                     text-transform: uppercase;
                     transition: 0.5s;
@@ -129,13 +129,13 @@
                         left: 0;
                         width: 100%;
                         height: 3px;
-                        background-color: $color-profile1;
+                        background-color: $color-1;
                         transform: scaleX(0);
                         transform-origin: right;
                         transition: all 0.5s;
                     }
                     &:hover {
-                        color: $color-profile2;
+                        color: $color-2;
                     }
                     &:hover::after {
                         transform: scaleX(1);
