--- a/public/css/sass/layouts/_portfolio.scss
+++ b/public/css/sass/layouts/_portfolio.scss
@@ -11,7 +11,7 @@
     margin: 0 auto 35px auto;
     list-style: none;
     text-align: center;
-    background: $color-profile1;
+    background: $color-1;
     border-radius: 50px;
     box-shadow: 0px 3px 7px 1px rgba(0, 0, 0, 0.5);
 }
@@ -23,14 +23,14 @@
     font-weight: 600;
     line-height: 1;
     text-transform: uppercase;
-    color: $color-profile3;
+    color: $color-3;
     margin-bottom: 5px;
     transition: all 0.3s ease-in-out;
 }
 
 .portfolio #portfolio-menu li:hover,
 .portfolio #portfolio-menu li.filter-active {
-    color: $color-profile2;
+    color: $color-2;
 }
 
 .portfolio #portfolio-menu li:last-child {
@@ -49,13 +49,14 @@
         position: absolute;
         width: 100%;
         height: 30%;
-        background: rgba($color-profile3, 0.7);
+        background-image: $color-bgNav;
+        opacity: 0.8;
         left: 15px;
         bottom: -100%;
         padding: 20px;
         transition: all .5s;
         a p {
-            color: $color-profile1;
+            color: $color-1;
         }
     }
 }
@@ -68,7 +69,7 @@
         transition: color .5s;
     }
     .cap a p:hover {
-        color: $color-profile2;
+        color: $color-2;
     }
 }
 
