--- a/public/css/sass/layouts/_skills.scss
+++ b/public/css/sass/layouts/_skills.scss
@@ -29,7 +29,7 @@
         } // end progressbar-title
         // 
         .bar-container {
-            background-color: rgba($color-profile2, 0.5);
+            background-color: rgba($color-2, 0.5);
             position: relative;
             // width: 100%;
             height: 5px;
@@ -37,7 +37,7 @@
             display: block;
             @include border-radius(5px);
             .progressbar {
-                background-color: $color-profile2;
+                background-color: $color-2;
                 position: absolute;
                 width: 0%;
                 height: 100%;
