--- a/public/css/sass/layouts/_testimonial.scss
+++ b/public/css/sass/layouts/_testimonial.scss
@@ -1,84 +1,83 @@
-
 /*--------------------------------------------------------------
 # Testimonials
 --------------------------------------------------------------*/
 
 .testimonials .testimonial-item {
-  box-sizing: content-box;
-  text-align: center;
-  min-height: 320px;  
+    box-sizing: content-box;
+    text-align: center;
+    min-height: 320px;
 }
 
 .testimonials .testimonial-item .testimonial-img {
-  width: 90px;
-  border-radius: 50%;
-  margin: 0 auto;
+    width: 90px;
+    border-radius: 50%;
+    margin: 0 auto;
 }
 
 .testimonials .testimonial-item h3 {
-  font-size: 18px;
-  font-weight: bold;
-  margin: 10px 0 5px 0;
-  color: #111;
+    font-size: 18px;
+    font-weight: bold;
+    margin: 10px 0 5px 0;
+    color: #111;
 }
 
 .testimonials .testimonial-item h4 {
-  font-size: 14px;
-  color: #999;
-  margin: 0;
+    font-size: 14px;
+    color: #999;
+    margin: 0;
 }
 
-.testimonials .testimonial-item .quote-icon-left, .testimonials .testimonial-item .quote-icon-right {
-  color: #d5e9f2;
-  font-size: 26px;
+.testimonials .testimonial-item .quote-icon-left,
+.testimonials .testimonial-item .quote-icon-right {
+    color: #d5e9f2;
+    font-size: 26px;
 }
 
 .testimonials .testimonial-item .quote-icon-left {
-  display: inline-block;
-  left: -5px;
-  position: relative;
+    display: inline-block;
+    left: -5px;
+    position: relative;
 }
 
 .testimonials .testimonial-item .quote-icon-right {
-  display: inline-block;
-  right: -5px;
-  position: relative;
-  top: 10px;
+    display: inline-block;
+    right: -5px;
+    position: relative;
+    top: 10px;
 }
 
 .testimonials .testimonial-item p {
-  font-style: italic;
-  margin: 0 15px 15px 15px;
-  padding: 20px;
-  background: rgba($color-profile2,0.2);
-  position: relative;
-  margin-top: 35px;
-  border-radius: 6px;
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
-  
+    font-style: italic;
+    margin: 0 15px 15px 15px;
+    padding: 20px;
+    background: rgba($color-2, 0.2);
+    position: relative;
+    margin-top: 35px;
+    border-radius: 6px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
 }
 
-
-.testimonials .owl-nav, .testimonials .owl-dots {
-  margin-top: 5px;
-  text-align: center;
+.testimonials .owl-nav,
+.testimonials .owl-dots {
+    margin-top: 5px;
+    text-align: center;
 }
 
 .testimonials .owl-dot {
-  display: inline-block;
-  margin: 0 5px;
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: #ddd !important;
+    display: inline-block;
+    margin: 0 5px;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: #ddd !important;
 }
 
 .testimonials .owl-dot.active {
-  background-color: #67b0d1 !important;
+    background-color: #67b0d1 !important;
 }
 
 @media (max-width: 767px) {
-  .testimonials {
-    margin: 30px 10px;
-  }
+    .testimonials {
+        margin: 30px 10px;
+    }
 }
