--- a/public/css/main.css
+++ b/public/css/main.css
@@ -97,35 +97,25 @@ body a:hover {
 
 /*-------------fonts---------------*/
 body {
-  font-family: Montserrat,'Helvetica Neue', Arial, sans-serif;
-}
-
-h1 {
-  font-size: 45px;
-}
-
-h2 {
-  font-size: 26px;
-}
-
-h3 {
-  font-size: 22px;
-}
-
-h4, .logo {
-  font-size: 15px !important;
+  font-family: Montserrat, 'Helvetica Neue', Arial, sans-serif;
 }
 
 .navbar a {
   font-size: 13px;
 }
 
-.nav-link, .logo {
+.nav-link {
   font-weight: 400;
+  line-height: 26px;
 }
 
-.nav-link, .logo {
-  line-height: 26px;
+p,
+.p,
+input[placeholder] {
+  color: #5c5c5c;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 23px;
 }
 
 .wrapper {
@@ -136,28 +126,29 @@ h4, .logo {
 
 .wrapper .icon {
   position: relative;
-  background-color: #ffffff;
+  background-color: white;
   border-radius: 50%;
   padding: 15px;
   margin: 10px;
   width: 50px;
   height: 50px;
   font-size: 18px;
+  color: #5c5c5c;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .wrapper .tooltip {
   position: absolute;
   top: 0;
   font-size: 14px;
-  background-color: #ffffff;
-  color: #ffffff;
+  background-color: white;
+  color: white;
   padding: 5px 8px;
   border-radius: 5px;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
@@ -171,7 +162,7 @@ h4, .logo {
   content: "";
   height: 8px;
   width: 8px;
-  background-color: #ffffff;
+  background-color: white;
   bottom: -3px;
   left: 50%;
   transform: translate(-50%) rotate(45deg);
@@ -194,35 +185,35 @@ h4, .logo {
 .wrapper .facebook:hover .tooltip,
 .wrapper .facebook:hover .tooltip::before {
   background-color: #3b5999;
-  color: #ffffff;
+  color: white;
 }
 
 .wrapper .twitter:hover,
 .wrapper .twitter:hover .tooltip,
 .wrapper .twitter:hover .tooltip::before {
   background-color: #46c1f6;
-  color: #ffffff;
+  color: white;
 }
 
 .wrapper .instagram:hover,
 .wrapper .instagram:hover .tooltip,
 .wrapper .instagram:hover .tooltip::before {
   background-color: #e1306c;
-  color: #ffffff;
+  color: white;
 }
 
 .wrapper .github:hover,
 .wrapper .github:hover .tooltip,
 .wrapper .github:hover .tooltip::before {
   background-color: #333333;
-  color: #ffffff;
+  color: white;
 }
 
 .wrapper .youtube:hover,
 .wrapper .youtube:hover .tooltip,
 .wrapper .youtube:hover .tooltip::before {
   background-color: #de463b;
-  color: #ffffff;
+  color: white;
 }
 
 @font-face {
@@ -266,7 +257,7 @@ h4, .logo {
 }
 
 .scrolled {
-  background-image: linear-gradient(90deg, #011a27 0%, #01415f 25%, #02769B 50%);
+  background-image: linear-gradient(90deg, #011a27 0%, #01415f 25%, #58a0b8 50%);
   box-shadow: 0px 7px 15px -7px #000000;
 }
 
@@ -665,7 +656,7 @@ h4, .logo {
 }
 
 .skills-bar-container li .progressbar-title {
-  color: #302f2f;
+  color: #808080;
   font-size: 15px;
 }
 
@@ -864,7 +855,7 @@ h4, .logo {
   font-weight: 600;
   line-height: 1;
   text-transform: uppercase;
-  color: #02769B;
+  color: #58a0b8;
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
 }
@@ -883,17 +874,11 @@ h4, .logo {
   overflow: hidden;
 }
 
-.filter a {
-  text-decoration: none;
-  color: #302f2f;
-  text-align: center;
-}
-
 .filter .cap {
   position: absolute;
   width: 100%;
   height: 30%;
-  background-image: linear-gradient(90deg, #011a27 0%, #01415f 25%, #02769B 50%);
+  background-image: linear-gradient(90deg, #011a27 0%, #01415f 25%, #58a0b8 50%);
   opacity: 0.8;
   left: 15px;
   bottom: -100%;
@@ -952,12 +937,12 @@ h4, .logo {
   font-size: 18px;
   font-weight: bold;
   margin: 10px 0 5px 0;
-  color: #111;
+  color: #808080;
 }
 
 .testimonials .testimonial-item h4 {
   font-size: 14px;
-  color: #999;
+  color: #5c5c5c;
   margin: 0;
 }
 
@@ -988,7 +973,7 @@ h4, .logo {
   position: relative;
   margin-top: 35px;
   border-radius: 6px;
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
 }
 
 .testimonials .owl-nav,
@@ -1041,7 +1026,7 @@ footer {
   .navbar.styleNav {
     border-radius: 0 0 80% / 100% 0;
     opacity: .9;
-    background-image: linear-gradient(90deg, #011a27 0%, #01415f 25%, #02769B 50%);
+    background-image: linear-gradient(90deg, #011a27 0%, #01415f 25%, #58a0b8 50%);
     background: radial-gradient(ellipse 70% 100% at 0px 50%, transparent 49%, #07485e 50%);
   }
   .navbar.styleNav .logo {
@@ -1175,7 +1160,7 @@ html::-webkit-scrollbar {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #02769B;
+  background: #58a0b8;
 }
 
 /*--------------------------------------------------------------
@@ -1203,7 +1188,7 @@ html::-webkit-scrollbar {
 }
 
 .back-to-top:hover {
-  background: #02769B;
+  background: #58a0b8;
 }
 
 .flexrow {
