--- a/public/css/sass/bases/_typography.scss
+++ b/public/css/sass/bases/_typography.scss
@@ -1,61 +1,41 @@
-
 /*-------------fonts---------------*/
 
 //font family
 @import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@900&display=swap');
-body{
-    font-family:Montserrat,'Helvetica Neue', Arial, sans-serif;
+body {
+    font-family: Montserrat, 'Helvetica Neue', Arial, sans-serif;
 }
 
 //font color
-
-
-
 //font-size
-h1{
-    font-size: $extralarge;
+// h1 {
+//     font-size: $extralarge;
+// }
+// h2 {
+//     font-size: $large;
+// }
+// h3 {
+//     font-size: $extramedium;
+// }
+// h4,
+// .logo {
+//     font-size: $medium !important;
+// }
+.navbar a {
+    font-size: $extrasmall;
 }
 
-h2 {
-    font-size:$large;    
-}
-h3 {
-    font-size: $extramedium;
-}
-h4 ,.logo{
-    font-size:$medium !important;
-}
-.navbar a{
-    font-size:$extrasmall;
+.nav-link {
+    font-weight: $smallweight;
+    line-height: $height4;
 }
 
-//font Weight
-// {
-//    font-weight: $bigweight;    
-// }
-.nav-link, .logo{
-    font-weight: $smallweight ;       
- }
-//  {
-//     font-weight: $smallweight;    
-//  }
-
-//line height
-// {
-//     line-height: $weight1;
-// }
-// {
-//     line-height: $weight2;
-// }
-// {
-//     line-height: $weight3;
-// }
-.nav-link, .logo{
-        line-height: $height4;
+p,
+.p,
+input[placeholder] {
+    color: $color-paragraph;
+    font-size: $medium;
+    font-weight: $smallweight;
+    line-height: $height5;
+    // font-family: ;
 }
-// {
-//     line-height: $weight5;
-// }
-// {
-//     line-height: $weight6;
-// }
