--- a/public/css/sass/components/_social.scss
+++ b/public/css/sass/components/_social.scss
@@ -1,47 +1,52 @@
 	@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+	$transition: all 0.3s cubic-bezier(0.68,
+	-0.55,
+	0.265,
+	1.55);
 	.wrapper {
 	    font-family: "Poppins", sans-serif;
 	    display: flex;
 	    justify-content: center;
 	    .icon {
 	        position: relative;
-	        background-color: #ffffff;
+	        background-color: $color-1;
 	        @include border-radius(50%);
 	        padding: 15px;
 	        margin: 10px;
 	        width: 50px;
 	        height: 50px;
 	        font-size: 18px;
+	        color: $color-paragraph;
 	        display: flex;
 	        justify-content: center;
 	        align-items: center;
 	        flex-direction: column;
 	        box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
 	        cursor: pointer;
-	        transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+	        transition: $transition;
 	    }
 	    .tooltip {
 	        position: absolute;
 	        top: 0;
 	        font-size: 14px;
-	        background-color: #ffffff;
-	        color: #ffffff;
+	        background-color: $color-1;
+	        color: $color-1;
 	        padding: 5px 8px;
 	        @include border-radius(5px);
 	        box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
 	        opacity: 0;
 	        pointer-events: none;
-	        transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+	        transition: $transition;
 	        &::before {
 	            position: absolute;
 	            content: "";
 	            height: 8px;
 	            width: 8px;
-	            background-color: #ffffff;
+	            background-color: $color-1;
 	            bottom: -3px;
 	            left: 50%;
 	            transform: translate(-50%) rotate(45deg);
-	            transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+	            transition: $transition;
 	        }
 	    }
 	    .icon:hover .tooltip {
@@ -58,30 +63,30 @@
 	    .facebook:hover .tooltip,
 	    .facebook:hover .tooltip::before {
 	        background-color: #3b5999;
-	        color: #ffffff;
+	        color: $color-1;
 	    }
 	    .twitter:hover,
 	    .twitter:hover .tooltip,
 	    .twitter:hover .tooltip::before {
 	        background-color: #46c1f6;
-	        color: #ffffff;
+	        color: $color-1;
 	    }
 	    .instagram:hover,
 	    .instagram:hover .tooltip,
 	    .instagram:hover .tooltip::before {
 	        background-color: #e1306c;
-	        color: #ffffff;
+	        color: $color-1;
 	    }
 	    .github:hover,
 	    .github:hover .tooltip,
 	    .github:hover .tooltip::before {
 	        background-color: #333333;
-	        color: #ffffff;
+	        color: $color-1;
 	    }
 	    .youtube:hover,
 	    .youtube:hover .tooltip,
 	    .youtube:hover .tooltip::before {
 	        background-color: #de463b;
-	        color: #ffffff;
+	        color: $color-1;
 	    }
 	}
