--- a/public/css/sass/layouts/_portfolio.scss
+++ b/public/css/sass/layouts/_portfolio.scss
@@ -41,9 +41,9 @@
     position: relative;
     overflow: hidden;
     a {
-        text-decoration: none;
-        color: $color-titles;
-        text-align: center;
+        // text-decoration: none;
+        // color: $color-titles;
+        // text-align: center;
     }
     .cap {
         position: absolute;
@@ -57,6 +57,7 @@
         transition: all .5s;
         a p {
             color: $color-1;
+            // font-size: 10px;
         }
     }
 }
@@ -69,6 +70,7 @@
         transition: color .5s;
     }
     .cap a p:hover {
+        // color: $color-2;$color-1-hover
         color: $color-2;
     }
 }
