--- a/public/css/sass/layouts/_testimonial.scss
+++ b/public/css/sass/layouts/_testimonial.scss
@@ -18,12 +18,12 @@
     font-size: 18px;
     font-weight: bold;
     margin: 10px 0 5px 0;
-    color: #111;
+    color: $color-titles;
 }
 
 .testimonials .testimonial-item h4 {
     font-size: 14px;
-    color: #999;
+    color: $color-paragraph;
     margin: 0;
 }
 
@@ -54,7 +54,7 @@
     position: relative;
     margin-top: 35px;
     border-radius: 6px;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
 }
 
 .testimonials .owl-nav,
