--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,7 +13,7 @@
     |-----variables font family-----|
     |-------------------------------|
     */
-@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @font-face {
   font-family: "Ludicrous-Stencil";
@@ -96,8 +96,14 @@ body a:hover {
 }
 
 /*-------------fonts---------------*/
-body {
-  font-family: Montserrat, 'Helvetica Neue', Arial, sans-serif;
+@font-face {
+  font-family: "cute-animal";
+  src: url("../fonts/cute-animal.ttf");
+}
+
+body,
+a {
+  font-family: 'Montserrat', sans-serif !important;
 }
 
 .navbar a {
@@ -113,9 +119,9 @@ p,
 .p,
 input[placeholder] {
   color: #5c5c5c;
-  font-size: 15px;
   font-weight: 400;
   line-height: 23px;
+  font-size: 14px;
 }
 
 .wrapper {
@@ -311,11 +317,6 @@ input[placeholder] {
     transform: scale(1, 1);
     opacity: 0.0;
   }
-}
-
-@font-face {
-  font-family: "cute-animal";
-  src: url("../fonts/cute-animal.ttf");
 }
 
 .content-profile-center {
@@ -1095,7 +1096,6 @@ footer {
   .navbar li a {
     position: relative;
     display: block;
-    font-family: Lato, sans-serif;
     color: white;
     text-decoration: none;
     text-transform: uppercase;
