--- a/public/css/sass/layouts/_experience.scss
+++ b/public/css/sass/layouts/_experience.scss
@@ -1,3 +1,9 @@
 .cardbg {
-    background-color: $color-2 !important;
+    background-image: $color-bgNav !important;
+}
+
+.exper {
+    // box-shadow: 10px 5px 5px black;
+    border-radius: 50% 0 0 50%;
+    // border-radius: 50%;
 }
