--- a/public/css/main.css
+++ b/public/css/main.css
@@ -920,7 +920,7 @@ input[placeholder] {
 }
 
 .exper {
-  border-radius: 50% 0 0 50%;
+  box-shadow: 2px 5px 20px black;
 }
 
 /*--------------------------------------------------------------
