--- a/public/css/sass/layouts/_experience.scss
+++ b/public/css/sass/layouts/_experience.scss
@@ -3,7 +3,7 @@
 }
 
 .exper {
-    // box-shadow: 10px 5px 5px black;
-    border-radius: 50% 0 0 50%;
+    box-shadow: 2px 5px 20px black;
+    // border-radius: 50% 0 0 50%;
     // border-radius: 50%;
 }
