--- a/public/css/sass/layouts/_portfolio.scss
+++ b/public/css/sass/layouts/_portfolio.scss
@@ -43,16 +43,16 @@
     .cap {
         position: absolute;
         width: 100%;
-        height: 30%;
+        height: 20%;
         background-image: $color-bgNav;
         opacity: 0.8;
         left: 15px;
         bottom: -100%;
-        padding: 20px;
+        // padding: 20px;
         transition: all .5s;
         a p {
             color: $color-1;
-            // font-size: 10px;
+            font-size: 20px;
         }
     }
 }
