--- a/public/css/sass/layouts/_portfolio.scss
+++ b/public/css/sass/layouts/_portfolio.scss
@@ -43,14 +43,16 @@
     .cap {
         position: absolute;
         width: 100%;
-        height: 20%;
+        height: 40px;
         background-image: $color-bgNav;
         opacity: 0.8;
         left: 15px;
         bottom: -100%;
-        // padding: 20px;
         transition: all .5s;
-        a p {
+        vertical-align: middle;
+        padding-top: 7px;
+        a {
+            padding: 3px;
             color: $color-1;
             font-size: 20px;
         }
