--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -152,7 +152,7 @@
 
 //buttons
 .twoButtons {
-    font-family: "Ludicrous-Stencil", sans-serif;
+    font-family: "Ludicrous-Stencil", sans-serif !important;
     position: relative;
     display: flex;
     justify-content: center;
