--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,21 +10,6 @@
     */
 /*
     |-------------------------------|
-    |-----variables font family-----|
-    |-------------------------------|
-    */
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
-@font-face {
-  font-family: "Ludicrous-Stencil";
-  font-weight: 400;
-  src: url("../fonts/Ludicrous-Stencil.ttf");
-  font-display: swap;
-  font-style: normal;
-}
-
-/*
-    |-------------------------------|
     |-variable padding for section--|
     |-------------------------------|
     */
@@ -48,6 +33,8 @@
     |-----variables line height-----|
     |-------------------------------|
     */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -101,9 +88,14 @@ body a:hover {
   src: url("../fonts/cute-animal.ttf");
 }
 
+@font-face {
+  font-family: "Ludicrous-Stencil";
+  src: url("../fonts/Ludicrous-Stencil.ttf");
+}
+
 body,
-a {
-  font-family: 'Montserrat', sans-serif !important;
+a:not(.twoButtons a) {
+  font-family: 'Montserrat', sans-serif;
 }
 
 .navbar a {
@@ -222,11 +214,6 @@ input[placeholder] {
   color: white;
 }
 
-@font-face {
-  font-family: "Ludicrous-Stencil";
-  src: url("../fonts/Ludicrous-Stencil.ttf");
-}
-
 .navbar {
   width: 100%;
   position: fixed;
@@ -246,7 +233,6 @@ input[placeholder] {
 .navbar li a {
   position: relative;
   display: block;
-  font-family: Lato, sans-serif;
   color: white;
   text-decoration: none;
   text-transform: uppercase;
@@ -386,7 +372,7 @@ input[placeholder] {
 }
 
 .twoButtons {
-  font-family: "Ludicrous-Stencil", sans-serif;
+  font-family: "Ludicrous-Stencil", sans-serif !important;
   position: relative;
   display: flex;
   justify-content: center;
@@ -878,17 +864,20 @@ input[placeholder] {
 .filter .cap {
   position: absolute;
   width: 100%;
-  height: 30%;
+  height: 40px;
   background-image: linear-gradient(90deg, #011a27 0%, #01415f 25%, #58a0b8 50%);
   opacity: 0.8;
   left: 15px;
   bottom: -100%;
-  padding: 20px;
   transition: all .5s;
+  vertical-align: middle;
+  padding-top: 7px;
 }
 
-.filter .cap a p {
+.filter .cap a {
+  padding: 3px;
   color: white;
+  font-size: 20px;
 }
 
 .filter:hover .cap {
@@ -1004,6 +993,11 @@ input[placeholder] {
   .testimonials {
     margin: 30px 10px;
   }
+}
+
+form {
+  width: 100%;
+  border: 2px solid green;
 }
 
 form .error {
