--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -34,7 +34,7 @@
 }
 
 .scrolled {
-    background-image: $color-bgNav;
+    background-image: $color-bgGradient;
     box-shadow: 0px 7px 15px -7px #000000;
 }
 
