--- a/public/css/main.css
+++ b/public/css/main.css
@@ -995,14 +995,20 @@ input[placeholder] {
   }
 }
 
+#contact .infos p,
+#contact input[placeholder],
+#contact textarea[placeholder] {
+  font-size: 14px;
+}
+
 form {
   width: 100%;
-  border: 2px solid green;
+  height: 100%;
 }
 
 form .error {
   color: #ff0000;
-  font-size: 12px;
+  font-size: 13px;
 }
 
 form button {
@@ -1012,16 +1018,17 @@ form button {
   width: 100%;
   height: 30px;
   line-height: 30px;
-  background: #07485e;
-  color: #fff;
+  background-image: linear-gradient(90deg, #011a27 0%, #01415f 25%, #58a0b8 50%);
+  color: white;
   text-transform: uppercase;
   font-weight: bold;
   margin-top: 1.5rem;
   cursor: pointer;
+  transition: all .7s;
 }
 
 form button:hover {
-  background: #58a0b8;
+  color: #07485e;
 }
 
 .bubble-ocean {
