--- a/public/css/sass/layouts/_portfolio.scss
+++ b/public/css/sass/layouts/_portfolio.scss
@@ -44,7 +44,7 @@
         position: absolute;
         width: 100%;
         height: 40px;
-        background-image: $color-bgNav;
+        background-image: $color-bgGradient;
         opacity: 0.8;
         left: 15px;
         bottom: -100%;
