--- a/public/css/sass/layouts/_contact.scss
+++ b/public/css/sass/layouts/_contact.scss
@@ -4,13 +4,31 @@
     textarea[placeholder] {
         font-size: $lessmedium;
     }
+    .fas {
+        color: $color-3;
+        font-size: $large;
+    }
 }
 
 form {
     width: 100%;
     height: 100%;
+    input.form-control {
+        padding-left: 40px;
+    }
+    .input-icons i {
+        position: absolute;
+        font-size: 20px;
+        margin-top: 8px;
+        margin-left: 8px;
+        opacity: .8;
+    }
+    input .far {
+        padding: 10px;
+        min-width: 40px;
+    }
     .error {
-        color: #ff0000;
+        color: #ff5e00;
         font-size: $extrasmall;
     }
     button {
