--- a/public/css/main.css
+++ b/public/css/main.css
@@ -107,7 +107,7 @@ a:not(.twoButtons a) {
   line-height: 26px;
 }
 
-p,
+p:not(.footer p),
 .p,
 input[placeholder] {
   color: #5c5c5c;
@@ -905,11 +905,11 @@ input[placeholder] {
 }
 
 .cardbg {
-  background-image: linear-gradient(90deg, #011a27 0%, #01415f 25%, #58a0b8 50%) !important;
+  background-color: #58a0b8 !important;
 }
 
 .exper {
-  box-shadow: 0px 3px 10px black;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
 /*--------------------------------------------------------------
@@ -1040,7 +1040,7 @@ form button {
   width: 100%;
   height: 30px;
   line-height: 30px;
-  background-image: linear-gradient(90deg, #011a27 0%, #01415f 25%, #58a0b8 50%);
+  background: #58a0b8;
   color: white;
   text-transform: uppercase;
   font-weight: bold;
@@ -1051,6 +1051,12 @@ form button {
 
 form button:hover {
   color: #07485e;
+}
+
+.footer {
+  background-image: linear-gradient(90deg, #011a27 0%, #01415f 25%, #58a0b8 50%);
+  padding: 15px 0;
+  box-shadow: 5px 0 3px rgba(0, 0, 0, 0.26);
 }
 
 .footer-bottom p:nth-child(2) {
