--- a/public/css/sass/layouts/_contact.scss
+++ b/public/css/sass/layouts/_contact.scss
@@ -38,7 +38,7 @@ form {
         width: 100%;
         height: 30px;
         line-height: 30px;
-        background-image: $color-bgGradient;
+        background: $color-3;
         color: $color-1;
         text-transform: uppercase;
         font-weight: bold;
