--- a/public/css/sass/layouts/_experience.scss
+++ b/public/css/sass/layouts/_experience.scss
@@ -1,9 +1,10 @@
 .cardbg {
-    background-image: $color-bgGradient !important;
+    background-color: $color-3 !important;
 }
 
 .exper {
-    box-shadow: 0px 3px 10px black;
+    // box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.233);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     // border-radius: 50% 0 0 50%;
     // border-radius: 50%;
 }
