--- a/public/css/sass/layouts/_footer.scss
+++ b/public/css/sass/layouts/_footer.scss
@@ -1,3 +1,9 @@
+.footer {
+    background-image: $color-bgGradient;
+    padding: 15px 0;
+    box-shadow: 5px 0 3px rgba(0, 0, 0, 0.26);
+}
+
 .footer-bottom p:nth-child(2) {
     font-size: $lessmedium;
 }
