--- a/public/css/main.css
+++ b/public/css/main.css
@@ -107,7 +107,7 @@ a:not(.twoButtons a) {
   line-height: 26px;
 }
 
-p:not(.footer p),
+p,
 .p,
 input[placeholder] {
   color: #5c5c5c;
@@ -1039,14 +1039,14 @@ form button {
   display: block;
   width: 100%;
   height: 30px;
+  font-size: 13px;
   line-height: 30px;
   background: #58a0b8;
   color: white;
   text-transform: uppercase;
-  font-weight: bold;
   margin-top: 1.5rem;
   cursor: pointer;
-  transition: all .7s;
+  transition: all .5s;
 }
 
 form button:hover {
@@ -1054,13 +1054,18 @@ form button:hover {
 }
 
 .footer {
-  background-image: linear-gradient(90deg, #011a27 0%, #01415f 25%, #58a0b8 50%);
+  background-color: #07485e;
   padding: 15px 0;
   box-shadow: 5px 0 3px rgba(0, 0, 0, 0.26);
 }
 
-.footer-bottom p:nth-child(2) {
+.footer-bottom p {
   font-size: 14px;
+  color: white !important;
+}
+
+.footer-bottom .credit {
+  color: #58a0b8;
 }
 
 .bubble-ocean {
