--- a/public/css/sass/bases/_typography.scss
+++ b/public/css/sass/bases/_typography.scss
@@ -43,7 +43,7 @@ a:not(.twoButtons a) {
     line-height: $height4;
 }
 
-p:not(.footer p),
+p,
 .p,
 input[placeholder] {
     color: $color-paragraph;
