--- a/public/css/sass/layouts/_contact.scss
+++ b/public/css/sass/layouts/_contact.scss
@@ -37,14 +37,15 @@ form {
         display: block;
         width: 100%;
         height: 30px;
+        font-size: $extrasmall;
         line-height: 30px;
         background: $color-3;
         color: $color-1;
         text-transform: uppercase;
-        font-weight: bold;
+        // font-weight: bold;
         margin-top: 1.5rem;
         cursor: pointer;
-        transition: all .7s;
+        transition: all .5s;
         &:hover {
             color: $color-2;
         }
