--- a/public/css/sass/abstracts/_variables.scss
+++ b/public/css/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 //thèmes
 $blueTheme:true;
-$orangeTheme:false;
+$orangeTheme: false;
 $greenTheme: false;
 // color by default 
 $color-2:rgb(7, 72, 94);
@@ -14,7 +14,6 @@ $logoImg:url(../images/logoBlue.png);
 @if ($blueTheme) {
     $color-2: #07485e;
     $color-3: #58a0b8;
-    // $color-3: #09638134;
     $color-bgGradient: linear-gradient(90deg, rgb(1, 26, 39) 0%, rgb(1, 65, 95) 25%, $color-3 50%);
     $animated-text-fill-img: "animated-text-fill-blue.webp";
     $box-shadow-navbar-mobile: 0 0 65px $color-2 inset, 0 0 20px #a1b4c0 inset, 0 0 5px #476281;
@@ -22,8 +21,8 @@ $logoImg:url(../images/logoBlue.png);
 }
 
 @else if ($orangeTheme) {
-    $color-2: rgb(177, 133, 2);
-    $color-3: rgb(216, 163, 6);
+    $color-2: #b18502;
+    $color-3: #d8a306;
     $color-bgGradient: linear-gradient(90deg, rgb(109, 80, 2) 10%, $color-2 35%, $color-3 50%);
     $animated-text-fill-img: "animated-text-fill-orange.webp";
     $box-shadow-navbar-mobile: 0 0 65px $color-2 inset, 0 0 20px #c7b57a inset, 0 0 5px #5a562d;
