--- a/public/css/sass/bases/_typography.scss
+++ b/public/css/sass/bases/_typography.scss
@@ -49,6 +49,6 @@ input[placeholder] {
     color: $color-paragraph;
     font-weight: $smallweight;
     line-height: $height5;
-    font-size: $medium;
+    font-size: $lessmedium;
     // font-family: ;
 }
