--- a/public/css/sass/layouts/_testimonial.scss
+++ b/public/css/sass/layouts/_testimonial.scss
@@ -54,7 +54,6 @@
     position: relative;
     margin-top: 35px;
     border-radius: 6px;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
 }
 
 .testimonials .owl-nav,
@@ -63,19 +62,17 @@
     text-align: center;
 }
 
-.testimonials .owl-dot {
-    display: inline-block;
-    margin: 0 5px;
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    background-color: #ddd !important;
-}
-
-.testimonials .owl-dot.active {
-    background-color: #67b0d1 !important;
-}
-
+// .testimonials .owl-dot {
+//     display: inline-block;
+//     margin: 0 5px;
+//     width: 12px;
+//     height: 12px;
+//     border-radius: 50%;
+//     background-color: #ddd !important;
+// }
+// .testimonials .owl-dot.active {
+//     background-color: #67b0d1 !important;
+// }
 @media (max-width: 767px) {
     .testimonials {
         margin: 30px 10px;
