--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -1,14 +1,3 @@
-//parallax for image background profile
-// .parallax-wrapper {
-//     // overflow-y: hidden;
-//     background-image: url('../images/bgprofile.jpg');
-//     background-size: cover;
-//     background-repeat: no-repeat;
-//     background-position: center;
-//     // background-color: ;
-//     height: 100vh;
-//     // width: 80%;
-// }
 .parallax-wrapper {
     overflow-y: hidden;
 }
@@ -109,7 +98,7 @@
 }
 
 
-/* Animate Background Image */
+/* Animate Background avatar */
 
 @-webkit-keyframes animTitle {
     100% {
@@ -158,8 +147,6 @@
     justify-content: center;
     font-size: 20px;
     letter-spacing: 4px;
-    // line-height: 40px;
-    // margin-top: 30px;
     div {
         width: 85px;
         height: 85px;
@@ -203,7 +190,7 @@
 }
 
 //bulles
-.bubble-ocean {
+.profile>.bubble-ocean {
     position: relative;
     width: 80vw;
     // height: 100vh;
@@ -214,7 +201,6 @@
     position: absolute;
     background: rgb(39, 91, 122);
     background: radial-gradient(circle, rgb(20, 53, 71) 0%, rgb(106, 170, 207) 50%, rgba(255, 255, 255, 1) 100%);
-    // filter: progid: DXImageTransform.Microsoft.gradient(startColorstr="#275b7a", endColorstr="#ffffff", GradientType=1);
     bottom: -10px;
     opacity: 0.3;
     -webkit-animation: bubble 15s ease-in-out infinite, sideWays 4s ease-in-out infinite alternate;
