--- a/public/css/sass/layouts/_skills.scss
+++ b/public/css/sass/layouts/_skills.scss
@@ -26,12 +26,10 @@
                 position: absolute;
                 right: $li-padding;
             }
-        } // end progressbar-title
-        // 
+        }
         .bar-container {
             background-color: rgba($color-2, 0.5);
             position: relative;
-            // width: 100%;
             height: 5px;
             margin-top: 5px;
             display: block;
@@ -53,7 +51,7 @@
                 -webkit-animation-delay: $animation-delay;
                 animation-delay: $animation-delay;
             }
-            //nommage des animations et delai des animations
+            /*ommage des animations et delai des animations*/
             .progressbar#progress-html {
                 -webkit-animation-name: progress-html;
                 animation-name: progress-html;
