--- a/public/css/sass/abstracts/_variables.scss
+++ b/public/css/sass/abstracts/_variables.scss
@@ -1,8 +1,11 @@
-//thèmes
+/* thèmes */
+
 $blueTheme:true;
 $orangeTheme: false;
 $greenTheme: false;
-// color by default 
+
+/* color by default */
+
 $color-2:rgb(7, 72, 94);
 $color-3: #02769B;
 $color-bgGradient: linear-gradient(90deg, rgb(0, 21, 31) 10%, rgb(0, 43, 63) 30%, $color-3 50%);
@@ -104,7 +107,9 @@ $height3:31px;
 $height4:26px;
 $height5:23px;
 $height6:21px;
-//Variables of kills.scs
+
+/*Variables of kills.scs */
+
 $percentHtml: 98%;
 $percentCss: 95%;
 $percentJavascript: 75%;
