--- a/public/css/sass/bases/_bases.scss
+++ b/public/css/sass/bases/_bases.scss
@@ -1,24 +1,51 @@
-//bases styles
-
-// //pour scroller lentement dans la page
-// html {
-//     scroll-behavior: smooth;
-//   }
-
-// @media (prefers-reduced-motion: reduce) {
-//     html {
-//       scroll-behavior: auto;
-//     }
-//   }
-
 body {
     width: 100%;
     background-color: #ffffff;
-    a:hover{
-        text-decoration: none ;          
+    a:hover {
+        text-decoration: none;
     }
-    overflow-y: scroll;    
+    overflow-y: scroll;
     overflow-x: hidden;
 }
 
 
+/*--------------------------------------------------------------
+# scrolbar
+--------------------------------------------------------------*/
+
+
+/* width */
+
+::-webkit-scrollbar {
+    width: 8px;
+    -webkit-transition: all 0.3s ease-in;
+    transition: all 0.3s ease-in;
+}
+
+
+/* Track */
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px $color-2;
+    border-radius: 10px;
+}
+
+
+/* Handle */
+
+::-webkit-scrollbar-thumb {
+    background: $color-2;
+    border-radius: 10px;
+}
+
+html::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+
+/* Handle on hover */
+
+::-webkit-scrollbar-thumb:hover {
+    background: $color-3;
+}
