--- a/public/css/sass/bases/_typography.scss
+++ b/public/css/sass/bases/_typography.scss
@@ -1,9 +1,15 @@
 /*-------------fonts---------------*/
 
-//font family
-//font for all elements
+
+/*font family */
+
+
+/*font for all elements */
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
-// for two buttons in profile
+
+/* for two buttons in profile */
+
 @font-face {
     font-family: "cute-animal";
     src: url("../fonts/cute-animal.ttf");
@@ -19,21 +25,6 @@ a:not(.twoButtons a) {
     font-family: 'Montserrat', sans-serif;
 }
 
-//font color
-//font-size
-// h1 {
-//     font-size: $extralarge;
-// }
-// h2 {
-//     font-size: $large;
-// }
-// h3 {
-//     font-size: $extramedium;
-// }
-// h4,
-// .logo {
-//     font-size: $medium !important;
-// }
 .navbar a {
     font-size: $extrasmall;
 }
