--- a/public/css/sass/layouts/_layouts.scss
+++ b/public/css/sass/layouts/_layouts.scss
@@ -1,6 +1,5 @@
 @import "./navbar",
 "./profile",
-"./about",
 "./skills",
 "./portfolio",
 "./experience",
@@ -120,7 +119,9 @@ html::-webkit-scrollbar {
     background-repeat: no-repeat;
 }
 
-// shadow card
+
+/*shadow card*/
+
 .shadow-card {
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     transition: all 1s;
@@ -128,69 +129,4 @@ html::-webkit-scrollbar {
 
 .shadow-card:hover {
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px !important;
-}
-
-//generals parametres in section best-sales-container and ourplant-container
-// -------------- media query  -------------------
-@include for-phone {
-    // header -----------------
-    //   .hamburger{display: block;}// display nav mobile
-    //   .nav{ display: none; }         
-    //   .titlescroll{
-    //        margin: -2.92vw  8vw;
-    //        h1{
-    //            margin-top: 60px;
-    //        }
-    //   } 
-}
-
-@include for-tablet {
-    // header---------------------------
-    //   .hamburger{display: none;} //no display nav mobile   
-    //   .nav{ display: flex; }  
-    //   .nav2 {display: none;}
-    //   .titlescroll{ margin: -2.92vw  8vw;} 
-    //section best-sales-container--------------
-    //  .best-sales-container {
-    //   margin: 0 100px 50px;
-    //  }
-    //   .plants1 { width: 50%;  }
-    // section ourplant-container--------------
-    //   .ourplant-container {
-    //     //   margin: 0 100px 50px;
-    //   }
-    //   .ourplant-plant {
-    //     //   grid-template-columns: 1fr 1fr;
-    //     //   grid-template-rows: 500px 500px 500px;
-    //     //   grid-template-areas: "a b" "c d" "e f";
-    //   }
-}
-
-@include for-desktop {
-    // header---------------------------
-    //   .hamburger{display: none;} //no display nav mobile  
-    //   .nav{ display: flex; }   
-    //   .nav2 {display: none;}         
-    //   .titlescroll{ margin: -2.92vw  8vw;}
-    // section best-sales-container--------------
-    //   .best-sales-container {
-    //       margin: 0 100px 50px;
-    //   }
-    // .best-sales-plant1,
-    // .best-sales-plant2,
-    // .best-sales-plant3 {
-    //       width: 33.33%;
-    //   }
-    //   .best-sales-plant4 {
-    //       width: 100%;
-    //   }
-    // section ourplant-container--------------
-    //       .ourplant-container {
-    //           margin: 0 100px 50px;
-    //       }
-    //       .ourplant-plant {
-    //           grid-template-columns: 1fr 1fr 1fr 1fr;
-    //           grid-template-rows: 500px 500px 500px 500px;
-    //           grid-template-areas: "a a b b" "a a c c" "d e e f" "d e e f";
-    //       }
 }
