--- a/public/css/sass/layouts/_mediaquery.scss
+++ b/public/css/sass/layouts/_mediaquery.scss
@@ -1,5 +1,6 @@
-    // -------------- media query for layouts -------------------
-    //header
+    /* -------------- media query for layouts -------------------*/
+    /*header*/
+    
     .bubble-ocean {
         display: none;
     }
@@ -13,8 +14,8 @@
     footer {
         margin: 0;
     }
+    /*portfolio*/
     
-    //portfolio
     .portfolio #portfolio-menu {
         li {
             padding: 10px 15px 8px 15px;
@@ -23,13 +24,6 @@
     }
     
     @include for-phone-tablet {
-        // .logo {
-        //     margin-left: 40%;
-        // }
-        // .bgcolorMobilToggle {
-        //     background-image: $color-bgGradient;
-        //     transition: all 0.3s linear;
-        // }
         .navbar.styleNav {
             border-radius: 0 0 80% / 100% 0;
             opacity: .9;
@@ -39,7 +33,7 @@
                 margin-left: 25%;
             }
         }
-        //position et spacing des textes links
+        /*osition et spacing des textes links*/
         .navbar-collapse {
             .navbar-nav {
                 width: 100%;
@@ -72,12 +66,12 @@
     }
     
     @include for-phone {
-        // header -----------------     
-        //margin 
+        /* header -----------------*/
+        /*margin */
         main {
             margin: 0px;
         }
-        //portfolio
+        /*portfolio*/
         .portfolio #portfolio-menu {
             li {
                 padding: 10px 15px 8px 15px;
@@ -87,16 +81,16 @@
     }
     
     @include for-tablet {
-        //margin 
+        /*margin */
         main {
             margin: 0px;
         }
-        // 2. 1header 
-        //bubble in header
+        /* 2. 1header */
+        /*bubble in header*/
         .bubble-ocean {
             display: block;
         }
-        //portfolio
+        /*portfolio*/
         .portfolio #portfolio-menu {
             li {
                 padding: 10px 15px 8px 15px;
@@ -106,11 +100,11 @@
     }
     
     @include for-desktop {
-        //margin 
+        /*margin */
         main {
             margin: 0px;
         }
-        //navbar
+        /*navbar*/
         .navbar {
             li {
                 a {
@@ -143,12 +137,12 @@
                 }
             }
         }
-        // header
-        //profile
+        /* header*/
+        /*profile*/
         .bubble-ocean {
             display: block;
         }
-        //portfolio
+        /*portfolio*/
         .portfolio #portfolio-menu {
             li {
                 padding: 10px 15px 8px 15px;
