--- a/public/css/sass/layouts/_navbar.scss
+++ b/public/css/sass/layouts/_navbar.scss
@@ -24,7 +24,6 @@
     }
 }
 
-// :not(.logo)
 .active {
     color: $color-2 !important;
 }
@@ -38,7 +37,9 @@
     box-shadow: 0px 7px 15px -7px #000000;
 }
 
-//custom icon navbar to white with svg
+
+/*custom icon navbar to white with svg*/
+
 .custom-toggler.navbar-toggler {
     border-color: rgba(255, 102, 204, 0);
 }
@@ -46,5 +47,3 @@
 .custom-toggler .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
-
-// ____________________
